--- a/view/openacademy_view.xml
+++ b/view/openacademy_view.xml
@@ -8,7 +8,14 @@
             <field name="arch" type="xml">
                 <form string="Course Form"> 
                     <field name="name" colspan="4"/>
-                    <field name="description" colspan="4"/> 
+                    <notebook colspan="4">
+                        <page string="Description">
+                            <field name="description" colspan="4" nolabel="1" />
+                        </page>
+                        <page string="About">
+                            <label string="This is an example of notebooks" /> 
+                        </page>
+                    </notebook>
                 </form>
             </field>
         </record>
