--- a/view/openacademy_view.xml
+++ b/view/openacademy_view.xml
@@ -2,21 +2,76 @@
 <!-- This is the form declaration -->
 <openerp>
     <data>
-        <record model="ir.ui.view" id="course_form_view"> 
+        <record model="ir.ui.view" id="course_form_view">
             <field name="name">course.form</field>
-            <field name="model">openacademy.course</field>
+            <field name="model">openacademy.course</field> 
             <field name="arch" type="xml">
-                <form string="Course Form"> 
-                    <field name="name" colspan="4"/>
+                <form string="Course Form">
+                    <field name="name" colspan="4" />
+                    <field name="responsible_id" />
                     <notebook colspan="4">
                         <page string="Description">
                             <field name="description" colspan="4" nolabel="1" />
                         </page>
                         <page string="About">
-                            <label string="This is an example of notebooks" /> 
+                            <label string="This is an example of notebooks" /> </page>
+                        <page string="Sessions">
+                            <field name="session_ids" nolabel="1" colspan="4" mode="tree">
+                                <tree string="Registered sessions">
+                                    <field name="name"/>
+                                    <field name="instructor_id"/>
+                                </tree>
+                            </field>
                         </page>
                     </notebook>
                 </form>
+            </field>
+        </record>
+        <record model="ir.ui.view" id="course_tree_view"> 
+            <field name="name">course.tree</field>
+            <field name="model">openacademy.course</field> 
+            <field name="arch" type="xml">
+                <tree string="Course Tree">
+                    <field name="name" />
+                    <field name="responsible_id" /> 
+                </tree>
+            </field>
+        </record>
+        
+        <record model="ir.ui.view" id="session_form_view"> 
+            <field name="name">session.form</field>
+            <field name="model">openacademy.session</field> 
+            <field name="arch" type="xml">
+                <form string="Session Form"> 
+                    <group colspan="2" col="2">
+                        <separator string="General" colspan="2"/> 
+                        <field name="course_id"/>
+                        <field name="name" />
+                        <field name="instructor_id" />
+                    </group>
+                    <group colspan="2" col="2">
+                        <separator string="Schedule" colspan="2"/> 
+                        <field name="start_date"/>
+                        <field name="duration"/>
+                        <field name="seats"/>
+                    </group>
+                    <separator string="Attendees" colspan="4"/>
+                    <field name="attendee_ids" colspan="4" nolabel="1">
+                        <tree string="" editable="bottom"> 
+                            <field name="partner_id"/>
+                        </tree>
+                    </field>
+                </form>
+            </field>
+        </record>
+        
+        <record model="ir.ui.view" id="session_tree_view"> 
+            <field name="name">session.tree</field>
+            <field name="model">openacademy.session</field> <field name="arch" type="xml">
+                <tree string="Session Tree"> 
+                    <field name="name"/> 
+                    <field name="course_id"/>
+                </tree>
             </field>
         </record>
     </data>
