Add an inheritance mechanism(corrigé).

--- a/view/openacademy.xml
+++ b/view/openacademy.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
-        <record model="ir.actions.act_window" id="course_list_action"> <field name="name">Courses</field>
+        <record model="ir.actions.act_window" id="course_list_action"> 
+            <field name="name">Courses</field>
             <field name="res_model">openacademy.course</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field> 
