--- a/view/partner_view.xml
+++ b/view/partner_view.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
+    
+        <record id="partner_is_instructor_form_view" model="ir.ui.view">
+            <field name="name">partner.instructor</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="base.view_partner_form"/>
+            <field name="arch" type="xml">
+                <!-- find field name, and insert field reference before it -->
+                <field name="is_company" position="before">
+                    <field name="instructor"/>
+                    <label for="instructor" string="Is an Instructor?" />
+                </field>
+            </field>
+        </record>
+        
         <record model="ir.actions.act_window" id="contact_list_action"> 
             <field name="name">Contacts</field>
             <field name="res_model">res.partner</field>
             <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field> 
+            <field name="view_mode">tree,form</field>
         </record>
         
         <menuitem id="configuration_menu" name="Configuration" parent="main_openacademy_menu" />
