--- a/view/openacademy_view.xml
+++ b/view/openacademy_view.xml
@@ -54,6 +54,7 @@
                         <field name="start_date"/>
                         <field name="duration"/>
                         <field name="seats"/>
+                        <field name="taken_seats_percent" widget="progressbar"/>
                     </group>
                     <separator string="Attendees" colspan="4"/>
                     <field name="attendee_ids" colspan="4" nolabel="1">
@@ -71,6 +72,7 @@
                 <tree string="Session Tree"> 
                     <field name="name"/> 
                     <field name="course_id"/>
+                    <field name="taken_seats_percent" widget="progressbar"/>
                 </tree>
             </field>
         </record>
