--- a/view/openacademy_view.xml
+++ b/view/openacademy_view.xml
@@ -53,11 +53,11 @@
                         <separator string="Schedule" colspan="2"/> 
                         <field name="start_date"/>
                         <field name="duration"/>
-                        <field name="seats"/>
+                        <field name="seats" on_change="onchange_taken_seats(attendee_ids,seats)"/>
                         <field name="taken_seats_percent" widget="progressbar"/>
                     </group>
                     <separator string="Attendees" colspan="4"/>
-                    <field name="attendee_ids" colspan="4" nolabel="1">
+                    <field name="attendee_ids" nolabel="1" colspan="4" mode="tree" on_change="onchange_taken_seats(attendee_ids,seats)">
                         <tree string="" editable="bottom"> 
                             <field name="partner_id"/>
                         </tree>
