--- a/view/openacademy_view.xml
+++ b/view/openacademy_view.xml
@@ -147,5 +147,43 @@
             </field>
         </record>
         
+        <!-- Session kanban view -->
+        <record model="ir.ui.view" id="view_openacad_session_kanban">
+            <field name="name">openacad.session.kanban</field>
+            <field name="model">openacademy.session</field>
+            <field name="arch" type="xml">
+                <kanban default_group_by="course_id">
+                <field name="color"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div
+                        t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)}
+                        oe_kanban_global_click_edit oe_semantic_html_override
+                        oe_kanban_card #{record.group_fancy==1 ? 'oe_kanban_card_fancy' :
+                        ''}">
+                        <div class="oe_dropdown_kanban">
+                        <!-- dropdown menu -->
+                        <div class="oe_dropdown_toggle">
+                            <span class="oe_e">#</span>
+                            <ul class="oe_dropdown_menu">
+                            <li><a type="delete">Delete</a></li>
+                            <li><ul class="oe_kanban_colorpicker" data-field="color"/></li>
+                            </ul>
+                        </div>
+                        <div class="oe_clear"></div>
+                        </div>
+                        <div t-attf-class="oe_kanban_content">
+                        <!-- title -->
+                        Session name: <field name="name"/><br />
+                        Start date: <field name="start_date"/><br />
+                        duration: <field name="duration"/>
+                        </div>
+                        </div>
+                    </t>
+                </templates>
+                </kanban>
+            </field>
+        </record>
+        
     </data>
 </openerp>
