--- a/wizard/create_attendee_view.xml
+++ b/wizard/create_attendee_view.xml
@@ -34,6 +34,14 @@
           </field>
         </record>
         
+    <act_window id="session_create_attendee_wizard" 
+        name="Add Attendees" 
+        src_model="openacademy.session" 
+        res_model="openacademy.create.attendee.wizard" 
+        view_mode="form"
+        target="new" 
+        key2="client_action_multi"/>
+        
     <menuitem name="Add attendee" parent="openacademy_menu" 
         id="create_attendee_wizard_menu" action="create_attendee_wizard_action"/>
     
